# ARCANE

./: .gitignore  Makefile  README.md  arcane-wrapper.sh  pyproject.toml  requirements.txt  run_server.sh
src/arcane_mcp/: __init__.py  server.py
src/arcane_mcp/agent/: __init__.py  cross_domain_searcher.py  orchestrator.py  problem_abstractor.py  reasoning_tracer.py  solution_translator.py
src/arcane_mcp/config/: api_config.yaml  config_manager.py  domain_config.yaml  main_config.yaml  settings.py  similarity_config.yaml  temporal_config.yaml  validation_config.yaml
src/arcane_mcp/core/: id_resolver.py
src/arcane_mcp/data_sources/: arxiv_client.py  base_client.py  openCitations_client.py  semanticScholar_client.py
