[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ARCANE"
version = "0.1.0"
description = "Unified Academic Discovery MCP Server for arXiv, Semantic Scholar, and OpenCitations"
readme = "README.md"
license = {text = "Apache License (2.0)"}
requires-python = ">=3.9"
authors = [
    { name = "Harsh Dasika" },
]

dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "feedparser>=6.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.20.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arcane_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
arcane = "arcane_mcp.server:main"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["arcane_mcp"]
